--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: synbreed
 Type: Package
 Title: Framework for the analysis of genomic prediction data using R
-Version: 0.9-3
-Date: 2012-05-24
+Version: 0.9-4
+Date: 2012-09-18
 Author: Valentin Wimmer, Theresa Albrecht, Hans-Juergen Auinger,
         Chris-Carolin Schoen with contributions by Larry Schaeffer,
         Malena Erbe, Ulrike Ober and Christian Reimer
 Depends: R (>= 2.14), lattice, igraph0, MASS, LDheatmap, qtl, doBy,
-        BLR, regress (>= 1.3-8), abind, synbreedData
+        BLR, regress (>= 1.3-8), abind, synbreedData (>= 1.3)
 Maintainer: Valentin Wimmer <Valentin.Wimmer@wzw.tum.de>
 Description: The package was developed within the Synbreed project for
         synergistic plant and animal breeding (www.synbreed.tum.de). It
@@ -27,6 +27,7 @@ LazyData: no
 ZipData: no
 Repository: CRAN
 Repository/R-Forge/Project: synbreed
-Repository/R-Forge/Revision: 400
-Packaged: 2012-05-24 10:18:47 UTC; rforge
-Date/Publication: 2012-05-25 06:20:00
+Repository/R-Forge/Revision: 430
+Repository/R-Forge/DateTimeStamp: 2012-09-19 16:08:01
+Date/Publication: 2012-09-20 06:21:18
+Packaged: 2012-09-19 18:23:27 UTC; rforge
