--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: synbreed
 Type: Package
 Title: Framework for the analysis of genomic prediction data using R
-Version: 0.9-4
-Date: 2012-09-18
+Version: 0.9-5
+Date: 2013-03-15
 Author: Valentin Wimmer, Theresa Albrecht, Hans-Juergen Auinger,
         Chris-Carolin Schoen with contributions by Larry Schaeffer,
         Malena Erbe, Ulrike Ober and Christian Reimer
 Depends: R (>= 2.14), lattice, igraph0, MASS, LDheatmap, qtl, doBy,
         BLR, regress (>= 1.3-8), abind, synbreedData (>= 1.3)
-Maintainer: Valentin Wimmer <Valentin.Wimmer@wzw.tum.de>
+Maintainer: Valentin Wimmer <Valentin.Wimmer@tum.de>
 Description: The package was developed within the Synbreed project for
         synergistic plant and animal breeding (www.synbreed.tum.de). It
         contains a collection of functions required for genomic
@@ -27,7 +27,8 @@ LazyData: no
 ZipData: no
 Repository: CRAN
 Repository/R-Forge/Project: synbreed
-Repository/R-Forge/Revision: 430
-Repository/R-Forge/DateTimeStamp: 2012-09-19 16:08:01
-Date/Publication: 2012-09-20 06:21:18
-Packaged: 2012-09-19 18:23:27 UTC; rforge
+Repository/R-Forge/Revision: 458
+Repository/R-Forge/DateTimeStamp: 2013-03-15 05:18:51
+Date/Publication: 2013-03-15 10:18:11
+Packaged: 2013-03-15 07:17:49 UTC; rforge
+NeedsCompilation: no
