--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ exportPattern(".")
 # Import all packages listed as Imports or Depends
 import(
   lattice,
-  igraph0,
+  igraph,
   MASS,
   LDheatmap,
   qtl,
